join page spacing fix

--- a/chamber_of_commerce/css/content_style.css
+++ b/chamber_of_commerce/css/content_style.css
@@ -71,6 +71,7 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
+        padding-left: 0;
     }
     #contact li {
         font-family: 'Brush Script MT', cursive;
